Search for route with params,improved some utils functions
